2002-06-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/mutopia-index.py (headertext_nopics): Add missing
	variable.

	* Documentation/windows/lilypond.hint: Renamed (previously setup.hint).

	* Documentation/windows/lilypond-doc.hint: New file.

	* GNUmakefile.in: Forward port: Add toplevel target install-html-doc.
	Bugfixes for --srcdir html-doc build.
	
	* make/lilypond-vars.make (LILYPOND_BOOK_INCLUDES): Forward port:
	Bugfix: Include $(builddir)/mf/out (was $(srcdir)/mf/out.

2002-06-10  Han-Wen  <hanwen@cs.uu.nl>

	* ly/script-init.ly (pralldown): add some scripts.

	* Documentation/user/refman.itely: many edits.

2002-06-09  Han-Wen  <hanwen@cs.uu.nl>

	* lily/tuplet-bracket.cc (brew_molecule): don't translate in Y
	direction, this breaks staffline avoidance of the bracket when
	they're horizontal.

2002-06-08  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/midi2ly.py: Fix handling of -o

2002-06-08  Han-Wen  <hanwen@cs.uu.nl>

	* lily/molecule.cc (translate): set max distance to 100 cm.

2002-06-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.60 released

	* lily/beam.cc: tremolo fix.

	* scripts/convert-ly.py:  add tuplet-X-visibility rules.
	add VerticalExtent -> verticalExtent rules.

	* lily/axis-group-engraver.cc: consistent case for
	XxxxVerticalExtent properties.  

	* Documentation/user/refman.itely (Tuplets): update
	tuplet-X-visibility properties. 

	* input/test/defaultbars.ly: Corrected (thanks Mats)
	
2002-06-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (shift_region_to_valid): fix stupido bug. 

	* buildscripts/lilypond-profile.sh: override settings if
	LILYPONDPREFIX is set.

2002-06-04  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/ly2dvi.py (non_path_environment): Fix typo

2002-06-03  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Extend "Quick notes" containing note tuples.

	* lilypond-font-lock.el: Add fixes and comments to syntax-table.

2002-06-03  Han-Wen  <hanwen@cs.uu.nl>
